created jet_generator class

--- a/an_rnn_example.ipynb
+++ b/an_rnn_example.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,26 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bjets_DF = pd.read_pickle(\"./bjets_IPerrs_separate.pkl\")\n",
+    "bjets_DF = pd.read_pickle(\"./bjets_fixJetAxisPiBy4.pkl\")\n",
     "#cjets_DF = pd.read_pickle(\"./cjets.pkl\")\n",
     "#ljets_DF = pd.read_pickle(\"./ljets.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00000000e+00, 3.26171652e-04, 3.26865661e-04, 1.60584317e-03,\n",
-       "        1.61712721e-03, 1.63582147e-03, 2.41969725e-05, 1.72767971e-05,\n",
-       "                   nan,            nan,            nan,            nan,\n",
+       "array([[0.00000000e+00, 8.37103452e-03, 1.17708156e-02, 1.17737862e-02,\n",
+       "        1.17373107e-02, 1.17009342e-02, 1.52302552e-05, 6.78582096e-06,\n",
+       "        1.22354167e-05, 1.08630882e-05, 1.38014829e-05, 6.51194847e-06,\n",
        "                   nan,            nan,            nan,            nan,\n",
        "                   nan,            nan,            nan,            nan,\n",
        "                   nan,            nan,            nan,            nan,\n",
@@ -68,7 +76,7 @@
        "                   nan,            nan]])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12.2 s\n"
+      "Wall time: 11.8 s\n"
      ]
     }
    ],
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,22 +146,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4.97 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "Xordered = copy.copy(X)#\n",
+    "Xordered = np.nan_to_num(Xordered)\n",
+    "\n",
+    "for i,jet in enumerate(Xordered[:,1:]):\n",
+    "    Xordered[i,1:] = jet[np.abs(jet[:,0]).argsort()[::-1]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "array([[ 0.00000000e+00,  0.00000000e+00,  7.85407340e-01,\n",
+       "         7.85402080e-01,  1.92429924e-05],\n",
+       "       [ 2.00022116e-03, -1.16675999e-03,  9.43066924e-01,\n",
+       "         6.66313834e-01,  7.17339434e-04],\n",
+       "       [ 1.74738381e-03,  3.25532909e-03,  7.32778516e-01,\n",
+       "         1.10462290e+00,  3.89469261e-04],\n",
+       "       [ 1.12789364e-03,  1.64433382e-03,  8.17002469e-01,\n",
+       "         9.77021723e-01,  4.64129800e-04],\n",
+       "       [ 4.02104330e-04,  4.39120457e-04,  8.00868369e-01,\n",
+       "         8.56897023e-01,  1.14345654e-04],\n",
+       "       [ 2.87020065e-04, -2.53868289e-04,  7.79234091e-01,\n",
+       "         7.40599277e-01,  2.69554580e-05],\n",
+       "       [ 1.36405868e-05,  5.91717890e-06,  7.35515071e-01,\n",
+       "         8.73810237e-01,  2.40695205e-03],\n",
+       "       [ 1.26771025e-05,  7.95574124e-06,  8.94972509e-01,\n",
+       "         5.61415404e-01,  5.67348721e-04],\n",
+       "       [ 1.23425144e-05,  1.33177882e-05,  7.48794010e-01,\n",
+       "         8.91283105e-01,  2.69575499e-04],\n",
+       "       [ 9.99259694e-06,  3.23455242e-06,  7.63384968e-01,\n",
+       "         7.62355230e-01,  3.55380715e-04],\n",
+       "       [ 8.98231200e-06, -6.05864579e-06,  8.04898600e-01,\n",
+       "         8.07001006e-01,  3.61043376e-04],\n",
+       "       [ 5.19219724e-06,  3.64975722e-06,  7.99492345e-01,\n",
+       "         7.61532932e-01,  6.34700517e-04],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.min(X[:,:,0])"
+    "Xordered[5]"
    ]
   },
   {
@@ -974,13 +1063,7 @@
       "Epoch 47/100\n",
       "223744/224000 [============================>.] - ETA: 0s - loss: 0.2590 - mean_absolute_error: 0.2590Epoch 00047: val_loss did not improve\n",
       "224000/224000 [==============================] - 75s 336us/step - loss: 0.2590 - mean_absolute_error: 0.2590 - val_loss: 0.2440 - val_mean_absolute_error: 0.2440\n",
-      "Epoch 48/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 48/100\n",
       "223744/224000 [============================>.] - ETA: 0s - loss: 0.2589 - mean_absolute_error: 0.2589Epoch 00048: val_loss did not improve\n",
       "224000/224000 [==============================] - 77s 346us/step - loss: 0.2589 - mean_absolute_error: 0.2589 - val_loss: 0.2444 - val_mean_absolute_error: 0.2444\n",
       "Epoch 49/100\n",
