--- a/an_rnn_example.ipynb
+++ b/an_rnn_example.ipynb
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -638,6 +638,197 @@
     "y_train=y[:split]\n",
     "y_test=y[split:]\n",
     "print(split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20000, 30, 9)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20000, 6)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-23113ce7a52f>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-25-23113ce7a52f>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    xtrain, xtest, ytrain, ytest = train_test_split(X, y, test_size=20000))\u001b[0m\n\u001b[1;37m                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "xtrain, xtest, ytrain, ytest = train_test_split(X, y, test_size=20000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20000, 30, 9)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtrain.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 7.02914071e-01, -1.45472865e-04,  5.30583772e-01, ...,\n",
+       "          5.40269453e-04,  1.19483459e-04,  2.81524145e-04],\n",
+       "        [ 1.89158725e-02, -2.02371339e-05,  7.64656196e-01, ...,\n",
+       "          5.40269453e-04,  2.52564871e-05,  5.24016908e-05],\n",
+       "        [ 2.52824303e-01,  2.09467670e-04,  7.01922575e-01, ...,\n",
+       "          5.40269453e-04, -1.38308268e-04, -3.57878464e-05],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan]],\n",
+       "\n",
+       "       [[-1.18250800e-01,  1.42732970e-05,  7.11617924e-01, ...,\n",
+       "          3.16914127e-05, -7.39826770e-06,  4.19706855e-06],\n",
+       "        [ 3.23494594e-01,  1.35026882e-04,  9.13364587e-01, ...,\n",
+       "          2.88479653e-03,  7.01059656e-06, -1.68305481e-04],\n",
+       "        [ 1.37317596e-01, -9.38823750e-05,  8.81771422e-01, ...,\n",
+       "          2.88479653e-03,  5.65839475e-05,  8.37112215e-05],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan]],\n",
+       "\n",
+       "       [[ 6.00613080e-01,  3.75422262e-04,  7.74509352e-01, ...,\n",
+       "          1.25373382e-03, -2.05611479e-04, -1.73123377e-04],\n",
+       "        [ 9.61607561e-02,  8.83495734e-05,  7.83340632e-01, ...,\n",
+       "          1.25373382e-03, -6.36013110e-05, -5.80933599e-05],\n",
+       "        [ 4.32969821e-01, -1.66899781e-04,  8.01008434e-01, ...,\n",
+       "          1.25373382e-03,  1.63268536e-04,  1.29014564e-04],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 8.71532372e-02,  5.77863181e-05,  5.35717564e-01, ...,\n",
+       "          1.61559073e-04, -7.67427644e-05,  3.12934431e-05],\n",
+       "        [ 1.94583876e+00,  2.27774206e-04,  2.11642723e-01, ...,\n",
+       "          8.25482656e-04, -4.09509485e-04,  6.35320548e-04],\n",
+       "        [ 6.63793619e-01,  8.33098136e-05,  1.33244801e+00, ...,\n",
+       "          8.25482656e-04,  2.25397805e-04, -1.85107226e-04],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan]],\n",
+       "\n",
+       "       [[ 2.86109610e-01,  2.44420397e-05,  9.29661667e-01, ...,\n",
+       "          6.91060318e-04,  1.00613735e-04, -1.17794728e-04],\n",
+       "        [ 3.74070244e-01,  9.07916329e-05,  6.18346976e-01, ...,\n",
+       "          6.91060318e-04, -1.64351034e-04,  8.87096814e-05],\n",
+       "        [ 6.01932334e-01,  9.67888493e-05,  5.47109688e-01, ...,\n",
+       "          9.04526450e-04, -2.00282216e-04,  1.79977309e-04],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan]],\n",
+       "\n",
+       "       [[ 2.16919637e+00,  3.07415603e-04,  8.76242306e-01, ...,\n",
+       "          6.23482633e-03,  4.19755612e-04, -7.23832179e-04],\n",
+       "        [ 1.89558369e+00,  5.99090710e-04,  8.08569619e-01, ...,\n",
+       "          7.98273522e-03, -1.93793869e-05, -7.37413113e-04],\n",
+       "        [ 3.22509257e+00, -3.79180807e-04,  6.63053003e-01, ...,\n",
+       "          7.98273522e-03, -3.88553131e-04,  1.15547085e-03],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan],\n",
+       "        [            nan,             nan,             nan, ...,\n",
+       "                     nan,             nan,             nan]]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
    ]
   },
   {
