--- a/an_rnn_example.ipynb
+++ b/an_rnn_example.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,17 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import RNNJF"
    ]
@@ -81,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading tracks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "features = ['d0','z0','phi','theta','q/p','x_p','y_p']\n",
     "trks = RNNJF.get_tracks(bjets_DF,features)"
@@ -110,7 +102,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
