--- a/an_rnn_example.ipynb
+++ b/an_rnn_example.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -280,17 +280,221 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.03 s\n"
+      "Wall time: 4.29 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "Xordered = copy.copy(X)#\n",
-    "Xordered = np.nan_to_num(Xordered)\n",
     "\n",
-    "for i,jet in enumerate(Xordered[:,1:]):\n",
-    "    Xordered[i,1:] = jet[np.abs(jet[:,0]).argsort()[::-1]]\n"
+    "for i,jet in enumerate(Xordered[:,0:]):\n",
+    "    nan_ind=np.where(np.isnan(Xordered[i]))[0][0]\n",
+    "    Xordered[i,0:nan_ind] = jet[np.abs(jet[:nan_ind,0]).argsort()[::-1]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 3.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "Xordered2 = copy.copy(X)#\n",
+    "Xordered2 = np.nan_to_num(Xordered2)\n",
+    "\n",
+    "for i,jet in enumerate(Xordered2[:,0:]):\n",
+    "    #nan_ind=np.where(np.isnan(Xordered[i]))[0][0]\n",
+    "    Xordered2[i,0:] = jet[np.abs(jet[:,0]).argsort()[::-1]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.55400141e-04,  6.46656090e-04,  1.12861577e+00,\n",
+       "         1.23239874e+00,  9.43747403e-03,  2.52833420e-04,\n",
+       "        -3.78767145e-04],\n",
+       "       [ 3.05830249e-04, -1.45472865e-04,  5.30583772e-01,\n",
+       "         4.89086541e-01,  9.99412432e-04,  1.19483459e-04,\n",
+       "         2.81524145e-04],\n",
+       "       [ 2.79096796e-04,  4.15360720e-05,  1.04527452e+00,\n",
+       "         8.50500942e-01,  7.07238344e-04,  2.20922701e-04,\n",
+       "        -1.70552577e-04],\n",
+       "       [ 2.13819548e-04,  6.92451573e-04,  8.54149012e-01,\n",
+       "         1.26119640e+00,  5.58770664e-04, -1.07515812e-04,\n",
+       "        -1.84821940e-04],\n",
+       "       [ 1.42863386e-04,  2.09467670e-04,  7.01922575e-01,\n",
+       "         1.02040053e+00,  5.28920613e-04, -1.38308268e-04,\n",
+       "        -3.57878464e-05],\n",
+       "       [ 8.62929489e-05, -7.41331289e-05,  8.14444879e-01,\n",
+       "         7.69719294e-01,  2.30363439e-04,  5.19130012e-05,\n",
+       "         6.89312218e-05],\n",
+       "       [ 5.81706742e-05, -2.02371339e-05,  7.64656196e-01,\n",
+       "         7.32375348e-01,  5.36291326e-05,  2.52564871e-05,\n",
+       "         5.24016908e-05],\n",
+       "       [ 1.08408655e-05,  1.22507440e-05,  7.66796184e-01,\n",
+       "         7.02927593e-01,  4.86856787e-04,  7.66564952e-06,\n",
+       "         7.66564952e-06],\n",
+       "       [ 6.69848830e-06, -7.78649556e-06,  7.98312937e-01,\n",
+       "         8.52188491e-01,  3.94778366e-04,  4.73654650e-06,\n",
+       "         4.73654650e-06],\n",
+       "       [ 3.08243932e-06, -5.86855058e-06,  7.75427002e-01,\n",
+       "         7.64369310e-01,  4.24610760e-04,  2.17961375e-06,\n",
+       "         2.17961375e-06],\n",
+       "       [ 1.61719965e-06, -5.30715821e-06,  8.46417574e-01,\n",
+       "         9.36954436e-01,  3.02544065e-03,  1.14353284e-06,\n",
+       "         1.14353284e-06],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan],\n",
+       "       [            nan,             nan,             nan,\n",
+       "                    nan,             nan,             nan,\n",
+       "                    nan]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xordered[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xordered2 == np.nan_to_num(Xordered)"
    ]
   },
   {
